# xls-dsl

./: angular.json  package.json  pnpm-lock.yaml
.github/workflows/: dev.yml
js/: templateEngine.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/data/: extraLib.js
src-tauri/src/: main.rs  runtime.js
src-tauri/src/collections/: lib.rs
src-tauri/src/dao/: db.rs  file_dao.rs  mod.rs  models.rs  schema.rs
src-tauri/src/deno/: fs_funs.rs  funs.rs  lib.rs  mod.rs
src-tauri/src/handlers/: handler.rs
src-tauri/src/parse_xls/: lib.rs
src-tauri/src/v8/: lib.rs
src/app/: app.component.html  app.component.ts  app.module.ts
src/app/plugin/codicon/: codicon.component.ts
src/app/plugin/dialog/: dialog.component.ts
src/app/plugin/editor/: base-editor.ts  editor.component.ts
src/app/plugin/menu/: menu.component.ts
src/app/plugin/monaco-editor/: monaco-editor.component.html  monaco-editor.component.ts
src/app/plugin/terminal/: terminal.component.html  terminal.component.ts
src/app/view/header/: header.component.html  header.component.ts
src/app/view/xls-editor/: xls-editor.component.html  xls-editor.component.ts
