[package]
name = "xls-dsl"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.23.1"
anyhow = "1.0.75"
actix-rt = "2.9.0"
lazy_static = "1.4.0"
diesel = {version = "2.1.4", features = ["sqlite", "chrono"] }
chrono = {version = "0.4.31", features = ["serde"] }
env = "1.0.1"
diesel_migrations = "2.1.0"
dirs = "6.0.0"
sonyflake = "0.3.0"
uuid = {version = "1.6.1", features = ["v4"] }
md5 = "0.7.0"
deno_core = "=0.311"
reqwest = { version = "0.12.19", features = ["blocking"] }
tera = "1.20.0"
handlebars = {version="6.3.2", features = ["string_helpers"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
strip = true
opt-level = 'z'
lto = true
